# temporal-or-textural

./: .gitignore  CLAUDE.md  LICENSE  README.md  cc_work_package_dead_features_010626.md  dfa_engine_spec.md  pyproject.toml  sae_training_spec.md  slurm_dfa_mass_delta.sh
notebooks/: LSL_subset.py  ToT_utils.py  check_sae_k.py  class_selection.py  compare_sae_features.py  copy_val_set.py  dfa_ablation_tf.py  extract_feature_counts.py  feature_pq.py  feature_sign_balance.py  inspect_kinetics_data.py  layer_selector.py  make_probe_config.py  patch_checkpoints_add_sae_k.py  perturb_accuracy.py  perturb_accuracy_tf.py  perturb_accuracy_tf_A.py  perturb_accuracy_vm.py  perturb_validation_classes.py  plot_feature_counts.py  profile_activations.py  rebuild_parquet.py  remote_compute_test.py  sl_backbone_accuracy.py  sl_model_comparison.py  smoke_test.py  spliced_accuracy.py  spliced_accuracy_tf.py  spliced_accuracy_vm.py  test_dfa_ablation.py  test_dfa_engine.py  test_feature_6077_conditions.py  test_feature_ablation.py  test_gather_by_position.py  tf_vm_similarity.py  train_sae.py  train_sae_smoketest.py  view_clip.py  vm_accuracy_summary.py
sae/: __init__.py  base.py  batchtopk_sae.py  losses.py  metrics.py  mp_sae.py  omp_sae.py  topk_sae.py
slurm/: class_selection_tf.sh  compute_dim_mean.sh  compute_dim_mean_sweep.sh  compute_dim_mean_vm_kinetics_sweep.sh  compute_dim_mean_vm_sweep.sh  cumulative_mass_diagnostic.sh  dfa_mass_delta.sh  extract_feature_counts.sh  make_probe_config.sh  pull_image.sh  run_ablation.sh  run_dfa_extraction_tf.sh  run_dfa_extraction_vm.sh  (+31 more)
(+50 files in other folders)
