[project]
name = "temporal-or-textural"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.15.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "wandb>=0.27.0",
]
