[project]
name = "temporal-or-textural"
version = "0.1.0"
description = "ProAI summer project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=17.0.1",
    "einops>=0.8.2",
    "huggingface-hub>=1.15.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.1",
    "wandb>=0.27.0",
]
