[project]
name = "temporal-or-textural"
version = "0.1.0"
description = "ProAI summer project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=17.0.1",
    "einops>=0.8.2",
    "huggingface-hub>=1.0.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "tqdm>=4.65.0",
    "transformers>=4.40.0",
    "wandb>=0.16.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
